--- a/challenge_4/copy/src/App.css
+++ b/challenge_4/copy/src/App.css
@@ -5,7 +5,6 @@ body {
   display: grid;
   grid-template-columns: repeat(auto);
   grid-template-rows: repeat(auto);
-  /* background-color: darkgreen; */
 }
 
 .covered {
@@ -21,10 +20,8 @@ body {
 }
 
 .uncovered {
-  /* background-color: #4CAF50; */
   border-style: solid;
-  border-color: red;
-  /* color: gray; */
+  border-color: gray;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -33,6 +30,18 @@ body {
 }
 
 .piece {
+  border-color: white;
   height: 70px;
   width: 70px;
+}
+
+button {
+  display: inline-block;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  background-color: #538fbe;
+  padding: 20px 70px;
+  font-size: 24px;
+  border: 1px solid #2d6898;
 }
