--- a/challenge_4/noredux/src/App.css
+++ b/challenge_4/noredux/src/App.css
@@ -8,10 +8,10 @@ body {
 }
 
 .covered {
-  background-color: gray;
+  background-color: #c0c0c0;
   border-style: solid;
-  border-color: darkgreen;
-  color: gray;
+  border-color: darkgray;
+  color: #c0c0c0;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
@@ -20,13 +20,42 @@ body {
 }
 
 .uncovered {
+  background-color: lightgray;
   border-style: solid;
   border-color: gray;
+  color: lightgray;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+.blue {
+  color: blue;
+}
+.green {
+  color: green;
+}
+.red {
+  color: red;
+}
+.purple {
+  color: purple;
+}
+.black {
+  color: black;
+}
+.gray {
+  color: gray;
+}
+.maroon {
+  color: maroon;
+}
+.turquoise {
+  color: turquoise;
+}
+.uncovered[buttonvalue="1"]:after {
+  color: blue;
 }
 
 .piece {
@@ -40,8 +69,8 @@ button {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  background-color: #538fbe;
+  /* background-color: #538fbe; */
   padding: 20px 70px;
   font-size: 24px;
-  border: 1px solid #2d6898;
+  border: 1px solid gray;
 }
